--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Js</title>
 </head>
 <body>
+    <div class="wrapper">
+        <h1>Факты</h1>
+        <h2 id="name"></h2>
+        <button id="button">Tap to change</button>
+    </div>
     <script src="./main.js"></script>
 </body>
 </html>
